# expressions-rs

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yml
examples/: playground.rs
src/: evaluator.rs  expr.pest  lib.rs  parser.rs  types.rs  value.rs
src/types/: custom_object.rs  dict.rs  dict_members.rs  error.rs  expression.rs  function.rs  list.rs  list_members.rs  member.rs  mod.rs  object.rs  primitive.rs  string_members.rs  value.rs
tasks/: 1_postfix-chain-refactor.md  2_lists_and_dicts.md  3_ternary.md  4_assignment_and_lvalues.md  5_statements_and_blocks.md  6_loops_for_variants.md  7_functions.md  8_builtins_and_methods.md  9_polish_and_errors.md  high_level_goals.md
tests/: evaluator_cases.txt  interpolator_cases.txt
