[package]
name = "simple-expressions"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A small expression language with variables, function calls, simple types and common operators"
repository = "https://github.com/abatkin/expressions-rs"
readme = "README.md"
authors = ["Adam Batkin <adam@batkin.net>"]
keywords = ["expression"]
categories = ["template-engine", "compilers", "parser-implementations"]


[dependencies]
thiserror = "2"
pest = "2.8"
pest_derive = "2.8"
